# repo-14

./: .blazar.yaml  .gitignore  .prettierrc.json  CHANGELOG.md  README.md  build.gradle  cspell.json  flagger-1.37.0.tgz  gatsby-config.js  go.mod  go.sum  grafana-1.7.0.tgz  hardhat.config.ts  index.yaml  loadtester-0.32.0.tgz  package-lock.json  package.json  podinfo-6.1.3.tgz  pom.xml  versions.tf
.github/: CODEOWNERS
.github/workflows/: actionlint.yaml  add-content-to-project.yml  algolia-indexing.yml  approve-bot-pr.yml  apptainer-ci.yaml  audit.yml  auto-assign-prs.yml  aws_ecr_publish.yml  benchmark.yml  build-lint-test.yml  build.yaml  build.yml  bump-cnspec-in-deps.yaml  cache-rocksdb.yml  changelog-reminder.yml  ci-changie.yml  ci.yaml  ci.yml  cla.yaml  cla.yml  clean-action-artifacts.yml  codeql.yml  (+125 more)
classical-ml/: requirements.txt
dictionaries/: domain-terms.txt  libraries.txt  names.txt  skale-terms.txt  solidity.txt
docs/: package-lock.json  package.json  requirements.txt
latest/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
orm/: go.mod  go.sum
predeployed/: .gitignore  MANIFEST.in  README.md  setup.cfg
predeployed/scripts/: build_package.sh  generate_abi.py  generate_package_version.py  prepare_artifacts.py
predeployed/src/multisigwallet_predeployed/: __init__.py  address.py  multisigwallet_generator.py
predeployed/test/: test_multisigwallet_generator.py
python/: requirements.txt
scripts/: requirements.txt
store/: go.mod  go.sum
tensorflow/: requirements.txt
ui/: package-lock.json  package.json
(+612 files in other folders)
